--- a/deck.mdx
+++ b/deck.mdx
@@ -4,7 +4,7 @@ import { FullScreenCode, Invert, Split } from 'mdx-deck/layouts'
 export { default as theme } from './theme'
 
 <Head>
-  <title>Presentation Title</title>
+  <title>Netlify demo</title>
   <meta itemprop="name" content="Presentation Title" />
   <meta itemprop="description" content="Presentation description" />
   <meta itemprop="image" content="https://pbs.twimg.com/profile_images/979408111868952576/yq2IUoGt_bigger.jpg" />
