--- a/deck.mdx
+++ b/deck.mdx
@@ -5,7 +5,7 @@ export { default as theme } from './theme'
 
 <Head>
   <title>Netlify demo</title>
-  <meta itemprop="name" content="Presentation Title" />
+  <meta itemprop="name" content="Hello" />
   <meta itemprop="description" content="Presentation description" />
   <meta itemprop="image" content="https://pbs.twimg.com/profile_images/979408111868952576/yq2IUoGt_bigger.jpg" />
   <meta name="twitter:card" content="summary_large_image" />
